force-app/main/default/objects/Service_Appointment_Insert__e/Service_Appointment_Insert__e.object-meta.xml
<CustomObject>
    <label>Service Appointment - Insert</label>
    <pluralLabel>Service Appointment - Insert</pluralLabel>
</CustomObject>