force-app/main/default/objects/Service_Appointment_Insert__e/fields/Appointment_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Scheduled_Start__c</fullName>
    <label>Appointment - Scheduled Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>