force-app/main/default/objects/Service_Appointment_Insert__e/fields/Service_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Status__c</fullName>
    <label>Service Appointment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>